# codexi

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: main.rs
src/core/: helpers.rs  mod.rs
src/core/command/: cmd.rs  mod.rs
src/core/wallet/: codexi.rs  file_management.rs  mod.rs  operation.rs  operation_flow.rs  operation_kind.rs  regular_kind.rs  system_kind.rs  viewer.rs
workspace/: gen_transactions.py
www/: .htaccess  index.html
